# ElevatedShortcut

./: .cursorrules  LICENSE  README.en.md  README.md  Untitled  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  elevate.rs  icon.rs  lib.rs  lnk.rs  main.rs  model.rs  storage.rs  tasks.rs  util.rs  win_shortcut.rs
